--- a/src/main/resources/templates/patient_additions/anamnesis.html
+++ b/src/main/resources/templates/patient_additions/anamnesis.html
@@ -4,7 +4,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Анамнез</title>
+        <title th:if="${isSelf}">Ваш анамнез</title>
+        <title th:if="${!isSelf}" th:text="'Анамнез пациента &laquo;' + ${patient.userInformation.fullName} + '&raquo;'">Анамнез пациента "Иванов Степан Петрович"</title>
         <link href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
         <link href="../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
         <link rel="apple-touch-icon" sizes="180x180" href="../../static/favicon/apple-touch-icon.png" th:href="@{/favicon/apple-touch-icon.png}" />
@@ -19,31 +20,33 @@
         <div class="container text-secondary my-5">
             <!---->
             <div class="row fs-5 mb-5">
-                <h1 class="text-center fs-3">
-                    <span th:if="${isSelf}">Ваш анамнез</span>
-                    <span th:if="${!isSelf}">
-                        Анамнез пациента
-                        <span th:text="${patient.userInformation.fullName}" class="fw-bold">Иванов Сергей Петрович</span>
-                    </span>
-                </h1>
+                <div class="col-12">
+                    <h1 class="text-center fs-3 mb-0">
+                        <span th:if="${isSelf}">Ваш анамнез</span>
+                        <span th:if="${!isSelf}">
+                            Анамнез пациента
+                            <span th:text="${patient.userInformation.fullName}" class="fw-bold">Иванов Степан Петрович</span>
+                        </span>
+                    </h1>
+                </div>
             </div>
             <!---->
-            <div class="row" th:if="${anamnesis != null}">
-                <div class="col-12 fs-5">
+            <div class="row fs-5" th:if="${anamnesis != null}">
+                <div class="col-12">
                     <div class="mb-5">
                         <h4 class="fs-4">Врождённые пороки сердца</h4>
-                        <span th:if="${anamnesis.heartDisease}">Имеются</span>
-                        <span th:if="${!anamnesis.heartDisease}">Отсутствуют</span>
+                        <span th:if="${anamnesis.heartDisease}">Есть</span>
+                        <span th:if="${!anamnesis.heartDisease}">Нет</span>
                     </div>
                     <div class="mb-5">
                         <h4 class="fs-4">Хронические заболевания лёгких</h4>
-                        <span th:if="${anamnesis.lungDisease}">Имеются</span>
-                        <span th:if="${!anamnesis.lungDisease}">Отсутствуют</span>
+                        <span th:if="${anamnesis.lungDisease}">Есть</span>
+                        <span th:if="${!anamnesis.lungDisease}">Нет</span>
                     </div>
                     <div class="mb-5">
                         <h4 class="fs-4">Хронические заболевания сердца или лёгких у родственников</h4>
-                        <span th:if="${anamnesis.relativesDiseases}">Имеются</span>
-                        <span th:if="${!anamnesis.relativesDiseases}">Отсутствуют</span>
+                        <span th:if="${anamnesis.relativesDiseases}">Есть</span>
+                        <span th:if="${!anamnesis.relativesDiseases}">Нет</span>
                     </div>
                     <div class="mb-5">
                         <h4 class="fs-4">Свёртываемость крови</h4>
@@ -51,8 +54,8 @@
                     </div>
                     <div class="mb-5">
                         <h4 class="fs-4">Сахарный диабет</h4>
-                        <span th:if="${anamnesis.diabetes}">Имеется</span>
-                        <span th:if="${!anamnesis.diabetes}">Отсутствует</span>
+                        <span th:if="${anamnesis.diabetes}">Есть</span>
+                        <span th:if="${!anamnesis.diabetes}">Нет</span>
                     </div>
                     <div class="mb-5">
                         <h4 class="fs-4">Рост</h4>
