--- a/src/main/resources/templates/users/user.html
+++ b/src/main/resources/templates/users/user.html
@@ -182,7 +182,12 @@
                 <div class="col-12">
                     <h3 class="fs-4">История лечения</h3>
                     <p class="mb-1">
-                        <a href="#" th:href="@{/anamnesis/for/__${user.id}__}" class="text-secondary">Перейти к анамнезу</a>
+                        <span th:if="${isSelf}">
+                            <a href="#" th:href="@{${user.hasAnamnesis} ? '/anamnesis/for/__${currentUser.id}__' : '/anamnesis/form'}" class="text-secondary">Перейти к анамнезу</a>
+                        </span>
+                        <span th:if="${!isSelf}">
+                            <a href="#" th:href="@{/anamnesis/for/__${currentUser.id}__}" class="text-secondary">Перейти к анамнезу</a>
+                        </span>
                     </p>
                     <p class="mb-0">
                         <a href="#" th:href="@{/patients/__${user.id}__/indicators}" class="text-secondary">Перейти к показателям</a>
