--- a/src/main/resources/templates/indicators/forms/fainting-form.html
+++ b/src/main/resources/templates/indicators/forms/fainting-form.html
@@ -19,7 +19,9 @@
         <div class="container text-secondary my-5">
             <!---->
             <div class="row fs-5 mb-5">
-                <h1 class="text-center fs-3 mb-0">Обморок</h1>
+                <div class="col-12">
+                    <h1 class="text-center fs-3 mb-0">Обморок</h1>
+                </div>
             </div>
             <!---->
             <div class="row">
