--- a/src/main/resources/templates/indicators/forms/spirometry-form.html
+++ b/src/main/resources/templates/indicators/forms/spirometry-form.html
@@ -19,7 +19,9 @@
         <div class="container text-secondary my-5">
             <!---->
             <div class="row fs-5 mb-5">
-                <h1 class="text-center fs-3 mb-0">Спирометрия</h1>
+                <div class="col-12">
+                    <h1 class="text-center fs-3 mb-0">Спирометрия</h1>
+                </div>
             </div>
             <!---->
             <div class="row">
@@ -31,11 +33,11 @@
                         </div>
                         <div class="mb-5 col-12 col-md-6 col-lg-4">
                             <label for="avlc" class="form-label fw-semibold fs-4">ФЖЕЛ</label>
-                            <input type="number" step="0.01" name="avlc" id="avlc" class="form-control" placeholder="1402" />
+                            <input type="number" step="0.01" name="avlc" id="avlc" class="form-control" placeholder="1402.89" />
                         </div>
                         <div class="mb-5 col-12 col-md-6 col-lg-4">
                             <label for="rlv" class="form-label fw-semibold fs-4">ООЛ</label>
-                            <input type="number" step="0.01" name="rlv" id="rlv" class="form-control" placeholder="430.12" />
+                            <input type="number" step="0.01" name="rlv" id="rlv" class="form-control" placeholder="430" />
                         </div>
                         <div class="mb-5 col-12 col-md-6 col-lg-4">
                             <label for="vfe1" class="form-label fw-semibold fs-4">ОФВ1</label>
