--- a/src/main/resources/templates/indicators/forms/pressure-form.html
+++ b/src/main/resources/templates/indicators/forms/pressure-form.html
@@ -19,7 +19,9 @@
         <div class="container text-secondary my-5">
             <!---->
             <div class="row fs-5 mb-5">
-                <h1 class="text-center fs-3 mb-0">Давление</h1>
+                <div class="col-12">
+                    <h1 class="text-center fs-3 mb-0">Давление</h1>
+                </div>
             </div>
             <!---->
             <div class="row">
@@ -27,11 +29,11 @@
                     <form action="#" method="post" id="pressure-form" class="fs-5">
                         <div class="mb-5 col-12 col-md-6 col-lg-4">
                             <label for="upper" class="form-label fw-semibold fs-4">Верхнее (мм рт.ст.)</label>
-                            <input type="number" name="upper" id="upper" class="form-control" placeholder="177" />
+                            <input type="number" name="upper" id="upper" class="form-control" placeholder="120" />
                         </div>
                         <div class="mb-5 col-12 col-md-6 col-lg-4">
                             <label for="lower" class="form-label fw-semibold fs-4">Нижнее (мм рт.ст.)</label>
-                            <input type="number" name="lower" id="lower" class="form-control" placeholder="64.9" />
+                            <input type="number" name="lower" id="lower" class="form-control" placeholder="80" />
                         </div>
                         <div class="mb-5">
                             <h4 class="fs-4">После нагрузки</h4>
