--- a/src/main/resources/templates/indicators/forms/walk-test-form.html
+++ b/src/main/resources/templates/indicators/forms/walk-test-form.html
@@ -19,7 +19,9 @@
         <div class="container text-secondary my-5">
             <!---->
             <div class="row fs-5 mb-5">
-                <h1 class="text-center fs-3 mb-0">Т6МХ: общие данные</h1>
+                <div class="col-12">
+                    <h1 class="text-center fs-3 mb-0">Т6МХ: общие данные</h1>
+                </div>
             </div>
             <!---->
             <div class="row mb-5">
@@ -56,7 +58,9 @@
             </div>
             <!---->
             <div class="row fs-5 mb-5">
-                <h1 class="text-center fs-3 mb-0">Т6МХ: показатели до нагрузки</h1>
+                <div class="col-12">
+                    <h1 class="text-center fs-3 mb-0">Т6МХ: показатели до нагрузки</h1>
+                </div>
             </div>
             <!---->
             <div class="row mb-5">
@@ -73,7 +77,7 @@
                         <label for="oxygenPercentageBefore" class="form-label fw-semibold fs-4">Содержание кислорода в крови (%)</label>
                         <input type="number" step="0.01" name="oxygenPercentageBefore" id="oxygenPercentageBefore" class="form-control" placeholder="98.21" />
                     </div>
-                    <div class="mb col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <label for="pulseRateBefore" class="form-label fw-semibold fs-4">Пульс (уд/мин)</label>
                         <input type="number" name="pulseRateBefore" id="pulseRateBefore" class="form-control" placeholder="114" />
                     </div>
@@ -81,10 +85,12 @@
             </div>
             <!---->
             <div class="row fs-5 mb-5">
-                <h1 class="text-center fs-3 mb-0">Т6МХ: показатели после нагрузки</h1>
+                <div class="col-12">
+                    <h1 class="text-center fs-3 mb-0">Т6МХ: показатели после нагрузки</h1>
+                </div>
             </div>
             <!---->
-            <div class="row mb-5">
+            <div class="row">
                 <div class="col-12">
                     <div class="mb-5 col-12 col-md-6 col-lg-4">
                         <label for="upperAfter" class="form-label fw-semibold fs-4">Верхнее давление (мм рт.ст.)</label>
