--- a/src/main/resources/templates/indicators/tables/pressure-table.html
+++ b/src/main/resources/templates/indicators/tables/pressure-table.html
@@ -4,7 +4,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Давление</title>
+        <title th:if="${isSelf}">Ваше давление</title>
+        <title th:if="${!isSelf}" th:text="'Давление пациента &laquo;' + ${patient.userInformation.fullName} + '&raquo;'">Анамнез пациента "Иванов Степан Петрович"</title>
         <link href="../../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
         <link href="../../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
         <link href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css" th:href="@{https://unpkg.com/gridjs/dist/theme/mermaid.min.css}" rel="stylesheet" />
